# dsba_c_ples_ples_course

2023_2024_2nd_sem/: functions.cpp
2023_2024_2nd_sem/contest2/task2/: main.cpp
2023_2024_2nd_sem/contest4/data/: tasks_workers.txt
2023_2024_2nd_sem/contest4/src/: main.cpp  solution.h
2023_2024_2nd_sem/contest5/: CMakeLists.txt
2023_2024_2nd_sem/contest5/task1/: main.cpp
2023_2024_2nd_sem/contest5/task2/: main.cpp
2023_2024_2nd_sem/contest5/task3/: main.cpp
2023_2024_2nd_sem/contest5/task4/: main.cpp
2023_2024_2nd_sem/contest5/task5/: main.cpp
2023_2024_2nd_sem/contest6/problem1/: main.cpp  solution.h
2023_2024_2nd_sem/week11/sem_21/: CMakeLists.txt
2023_2024_2nd_sem/week12/sem_23/: CMakeLists.txt
2023_2024_2nd_sem/week12/sem_24/: CMakeLists.txt
copy_data/Demo_Exam/: CMakeLists.txt
copy_data/contest1/: CMakeLists.txt
copy_data/contest2/: CMakeLists.txt
copy_data/contest2/a/: main.cpp
copy_data/contest2/b/: main.cpp
copy_data/contest2/c/: main_v1.cpp  main_v2.cpp
copy_data/contest2/d/: main.cpp
copy_data/contest2/e/: main.cpp
copy_data/contest2/g/: main.cpp
copy_data/contest3/: CMakeLists.txt
copy_data/contest5/: CMakeLists.txt
copy_data/contest6/: CMakeLists.txt
copy_data/week 1-1/: CMakeLists.txt
copy_data/week 1-2/: CMakeLists.txt
copy_data/week 3/: CMakeLists.txt
copy_data/week10/: CMakeLists.txt
copy_data/week4/: CMakeLists.txt
copy_data/week5/: CMakeLists.txt
copy_data/week6/: CMakeLists.txt
copy_data/week7/: CMakeLists.txt
copy_data/week8/: CMakeLists.txt
copy_data/week9/: CMakeLists.txt
(+171 files in other folders)
